--- a/backend/package.json
+++ b/backend/package.json
@@ -1,4 +1,8 @@
 {
+  "name": "backend",
+  "version": "1.0.0",
+  "main": "index.js",
+  "license": "MIT",
   "dependencies": {
     "express": "^4.18.2"
   }
