--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "src/server.js",
   "license": "MIT",
+  "type": "module",
   "dependencies": {
     "express": "^4.18.2"
   }
+  
 }
